Se agrega color de fondo por css

--- a/sebastian.html
+++ b/sebastian.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-2"></div>
                     <div class="col-8">
-                        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="resources/chester.jpg" class="d-block rounded" alt="...">
