se actualiza Kevin.html

--- a/kevin.html
+++ b/kevin.html
@@ -37,15 +37,11 @@
         </div>
       </nav>
       <div class="container-fluid text-center">
-        <h1>Kevin Alejandro Jara Machuca</h1>
-
-        <p>kevin alejandro jara machuca es un joven licenciado, actualmente estudiante de 23 años, tiene experiencia como guardia de seguridad,ya que trabajo en aquel rubro por 3 años, actualmente esta egresado de la carrera de tecnico en programacion y analisis de sistemas del insituto aiep, 
+        <h1 id="K" >Kevin Alejandro Jara Machuca</h1>
+        <p>Kevin Alejandro Jara Machuca es un joven licenciado, actualmente estudiante de 23 años, tiene experiencia como guardia de seguridad,ya que trabajo en aquel rubro por 3 años, actualmente esta egresado de la carrera de tecnico en programacion y analisis de sistemas del insituto aiep, 
             ademas cuenta con un diplomado en desarrollo de aplicaciones moviles de ios y actualmente esta realizando un curso de front end.</p>
         <img src="resources/logo.png" alt="">
         <p>En el instituto aiep curso la carrera de tecnico en programación y analisis de sistemas la cual tuvo una duracion de 5 semestres.</p>
-        <h1>Pasatiempos</h1>
-        <p>Cuando Kevin no esta en horarios de estudios o horarios profesionales kevin se dedica a entretenerse con variadas actividades, tanto como tocar guitarra y jugar videojuegos, la entretencion es una parte fundamental en su vida, algunas de sus pasiones sin embargo son la musica y la naturaleza.</p>
-        <h1>Videojuegos Favoritos de Kevin</h1>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
