Se cambia about por contact, se crea form basico.

--- a/sebastian.html
+++ b/sebastian.html
@@ -20,7 +20,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Sobre Nosotros</a>
+                <a class="nav-link" href="contact.html">Contactanos</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,8 +38,9 @@
       </nav>
 
       <div class="container-fluid">
+        <div class="text-center"><h1>Sebastian Cerda</h1></div>
         <div class="row mt-5">
-            <div class="col-8"><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sit quo, ipsam dicta deserunt non animi. Odio tenetur dolorem, dicta cupiditate distinctio sed necessitatibus beatae veritatis sequi reprehenderit voluptate. Temporibus?</h1></div>
+            <div class="col-8"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sit quo, ipsam dicta deserunt non animi. Odio tenetur dolorem, dicta cupiditate distinctio sed necessitatibus beatae veritatis sequi reprehenderit voluptate. Temporibus?</h2></div>
             <div class="col-4"><img class="img-thumbnail" src="resources/seba.jpg" alt="hello"></div>
         </div>
         <div class="mt-2">
