--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,55 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contactanos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portafolios
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="sebastian.html">Sebastian Cerda</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="kevin.html">Kevin Jara</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!--  -->
     <div>
     <main class="py-4">
         <div class="container">
-            <div class="div">
+            <div class="mb-3">
                 <h1>Contactanos:</h1>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <label class="col-2 col-form-label mb-3">Nombre</label>
-                    <input type="text" name="" id="" class="col-6 col-form-control col-2">
+            <div class="row mb-1">
+                    <label class="col-auto col-form-label mb-3">Nombre</label>
+                    <input type="text" name="" id="" class="col-form-control">
                 </div>
-                <div class="col-6">
-                    <label class="col-2 col-form-label mb-3">Apellidos</label>
-                    <input type="text" name="" id="" class="col-6 col-form-control">
+            <div class="row mb-1">
+                    <label class="col-form-label mb-3 col-auto">Apellidos</label>
+                    <input type="text" name="" id="" class="col-auto col-form-control">
                 </div>
+            
+            <div class="col-row">
+                <label for="">Contactar a</label>
+                <select name="" id="">
+                    <option value="">Sebastian</option>
+                    <option value="">Kevin</option>
+                </select>
             </div>
         </div>
     </main>
