--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       </nav>
       <div class="container-fluid text-center">
         <h1>hola mundo</h1>
+        <video width="1920" height="720" controls>
+          <source src="resources/pigs.mp4" type="video/mp4">
+        </video> 
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
