--- a/sebastian.html
+++ b/sebastian.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </nav>
-
+      <main class="p-5">
       <div class="container-fluid">
         <div class="text-center"><h1>Sebastian Cerda</h1></div>
         <div class="row mt-5">
@@ -44,11 +44,11 @@
             <div class="col-4"><img class="img-thumbnail" src="resources/seba.jpg" alt="hello"></div>
         </div>
         <div class="mt-2">
-            <h1 class="text-center">Mis cachorros</h1>
+            <h1 class="text-center">Mis cachorros</h1>  
             <div class="row">
                 <div class="col-2"></div>
                     <div class="col-8">
-                        <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
+                        <div id="carouselExampleFade" class="carousel slide  carousel-fade" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="resources/chester.jpg" class="d-block rounded" alt="...">
@@ -71,6 +71,7 @@
             </div>
         </div>
       </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
