Cambios a navbar. Se agrega navbar a elemento header y se centra en contenedor.

--- a/sebastian.html
+++ b/sebastian.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+  <header>
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,11 +24,11 @@
                 <a class="nav-link" href="contact.html">Contactanos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Portafolios
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item active" href="sebastian.html">Sebastian Cerda</a></li>
+                  <li><a class="dropdown-item" href="sebastian.html">Sebastian Cerda</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="kevin.html">Kevin Jara</a></li>
                 </ul>
@@ -36,6 +37,7 @@
           </div>
         </div>
       </nav>
+  </header>
       <main class="p-5">
       <div class="container-fluid">
         <div class="text-center"><h1>Sebastian Cerda</h1></div>
