--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
           <div id="form-mensaje-error" class="alert alert-danger" role="alert" style="display: none;">
               <ul></ul>
           </div>
-            <form action="" method="get">
+            <form method="get">
             <div class="col-row mb-1">
               <label for="nombre">Nombre</label>
               <input type="text" id="nombre" name="nombre" />
@@ -69,7 +69,7 @@
               </select>
           </div>
           <div class="col-row mb-3">
-            <label class="mb-3" for="">Me gustan los completos con</label>
+            <label class="mb-3">Me gustan los completos con</label>
             <div class="form-check">
               <input type="radio" id="mayo" name="completo" value="mayo" />
               <label for="mayo">Mayonesa</label>
