--- a/sebastian.html
+++ b/sebastian.html
@@ -43,7 +43,7 @@
         <div class="text-center"><h1>Sebastian Cerda</h1></div>
         <div class="row mt-5">
             <div class="col-8"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sit quo, ipsam dicta deserunt non animi. Odio tenetur dolorem, dicta cupiditate distinctio sed necessitatibus beatae veritatis sequi reprehenderit voluptate. Temporibus?</h2></div>
-            <div class="col-4"><img class="img-thumbnail" src="resources/seba.jpg" alt="hello"></div>
+            <div class="col-4"><img id="imgPerfil" class="img-thumbnail" src="resources/seba.jpg" alt="hello"></div>
         </div>
         <div class="mt-2">
             <h1 class="text-center">Mis cachorros</h1>  
