--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-dark">
-        <div class="container-fluid ">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contactanos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Portafolios
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="sebastian.html">Sebastian Cerda</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="kevin.html">Kevin Jara</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-dark navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contactanos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Conocenos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+    </header>
   </header>
       <div class="container-fluid text-center">
         <div class="ratio ratio-16x9">
