--- a/kevin.html
+++ b/kevin.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head> 
 <body>
+  <header>
   <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-dark navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
@@ -23,24 +24,25 @@
             <a class="nav-link" href="contact.html">Contactanos</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Portafolios
+            <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Conocenos
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="sebastian.html">Sebastian Cerda</a></li>
+              <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item active" href="kevin.html">Kevin Jara</a></li>
+              <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+  </header>
   <main>
     <div class="container-fluid">
       <div class="row mt-5">
         <div class="col-8 contenedorh2"><h2 class="titulo">Kevin Alejandro Jara Machuca</h2></div>
-        <div class="col-4 contenedorimg"><img class="img" src="resources/fotomia.png" alt=""></div>
+        <div class="col-4 contenedorimg"><img class="img" id="imgPerfil" src="resources/fotomia.png" alt=""></div>
     </div>
       <div class="contenedor">
         <div class="contenido">
