--- a/kevin.html
+++ b/kevin.html
@@ -74,6 +74,15 @@
       </div>
       </div>
       </main>
+      <footer class="bg-dark">
+        <div class="container py-5">
+          <div class="bg-dark py-4">
+            <div class="container text-center">
+              <p class="text-muted mb-0 py-2">S&K</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
