--- a/registro.html
+++ b/registro.html
@@ -25,8 +25,8 @@
               <a class="nav-link" href="contact.html">Contactanos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="registro.html">Registrate</a>
-            </li>
+                <a class="nav-link" href="registro.html">Registrate</a>
+              </li>
             <li class="nav-item dropdown">
               <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Conocenos
@@ -46,7 +46,7 @@
     <div>
     <main class="py-4 text-center">
             <div class="mb-3">
-                <h1>Contactanos:</h1>
+                <h1>Registrate:</h1>
                 <div class="d-flex justify-content-center">
                   <div id="form-contacto-exito" class="alert alert-success alert-dismissible" role="alert" style="display: none;">
                     <ul>
@@ -72,23 +72,28 @@
               <input type="text" id="nombre" name="nombre" />
             </div>
             <div class="row mb-1">
+                <label for="apellidos">Apellidos</label>
+                <input type="text" id="apellidos" name="apellidos" />
+              </div>
+            <div class="row mb-1">
               <label for="correo">Correo Electrónico</label>
               <input type="email" id="correo" name="correo" />
             </div>
-            <div class="row mb-3">
-              <label for="selectId">Enviar solicitud a</label>
-              <select id="selectId" name="selectId">
-                  <option value="seba">Sebastian</option>
-                  <option value="kevin">Kevin</option>
-              </select>
-          </div>
+            <div class="row mb-1">
+                <label for="contraseña">Contraseña</label>
+                <input type="password" id="contraseña" name="contraseña" />
+              </div>
+              <div class="row mb-1">
+                <label for="confir">Confirmar Contraseña</label>
+                <input type="password" id="confir" name="confir" />
+              </div>
           <div class="row mb-3">
-            <label class="mb-3">Me gustan los completos con</label>
+            <label class="mb-3">Como desea ser tratado</label>
             <div class="form-check">
-              <input type="radio" id="mayo" name="completo" value="mayo" checked/>
-              <label for="mayo">Mayonesa</label>
-              <input type="radio" id="ketchup" name="completo" value="ketchup" />
-              <label for="ketchup">Ketchup</label>
+              <input type="radio" id="el" name="el" value="el" checked/>
+              <label for="el">El y Sr.</label>
+              <input type="radio" id="ella" name="ella" value="ella" />
+              <label for="ella">Ella y Sra.</label>
             </div>
           </div>
           <div class="row mb-3">
@@ -100,7 +105,7 @@
           <div class="row mb-3 justify-content-center">
           <input class="flex form-check-input" type="checkbox" value="si" id="flexVender" name="flexVender" checked>
           </div>
-              <button id="btn-contact" class="btn btn-primary" type="button">Enviar</button>
+              <button id="btn-contact" class="btn btn-primary" type="button">Registrate</button>
           </form>
        </div>
     </main>
