--- a/sebastian.html
+++ b/sebastian.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contactanos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registro.html">Registrate</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Conocenos
