Se arregla footer y se agrega marginbottom a kevin.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head> 
 <body>
+  <div id="page-container">
   <header>
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
@@ -50,6 +51,7 @@
           <p class="text-muted mb-0 py-2">S&K</p>
         </div>
     </footer>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
