--- a/sebastian.html
+++ b/sebastian.html
@@ -9,76 +9,78 @@
     <title>Sebastian Cerda</title>
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-dark navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contactanos</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Conocenos
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
-              </ul>
-            </li>
-          </ul>
+  <div id="page-container">
+    <header>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-dark navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contactanos</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Conocenos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-    </header>
-      <main class="p-5">
-      <div class="container-fluid">
-        <div class="text-center"><h1>Sebastian Cerda</h1></div>
-        <div class="row mt-5">
-            <div class="col-8"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sit quo, ipsam dicta deserunt non animi. Odio tenetur dolorem, dicta cupiditate distinctio sed necessitatibus beatae veritatis sequi reprehenderit voluptate. Temporibus?</h2></div>
-            <div class="col-4"><img class="img-fluid imgSeba" id="imgPerfil" src="resources/seba.jpg" alt="hello"></div>
+      </nav>
+      </header>
+        <main class="p-5" id="content-wrap">
+        <div class="container-fluid">
+          <div class="text-center"><h1>Sebastian Cerda</h1></div>
+          <div class="row mt-5">
+              <div class="col-8"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sit quo, ipsam dicta deserunt non animi. Odio tenetur dolorem, dicta cupiditate distinctio sed necessitatibus beatae veritatis sequi reprehenderit voluptate. Temporibus?</h2></div>
+              <div class="col-4"><img class="img-fluid imgSeba" id="imgPerfil" src="resources/seba.jpg" alt="hello"></div>
+          </div>
+          <div class="mt-2">
+              <h1 class="text-center">Mis cachorros</h1>  
+              <div class="row">
+                  <div class="col-2"></div>
+                      <div class="col-8">
+                          <div id="carouselExampleFade" class="carousel slide  carousel-fade" data-bs-ride="carousel">
+                              <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                      <img src="resources/chester.jpg" class="d-block rounded imgSeba" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                      <img src="resources/jack.jpg" class="d-block rounded imgSeba" alt="...">
+                                  </div>
+                              </div>
+                              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                              </button>
+                              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                              </button>
+                          </div>
+                      </div>
+                  <div class="col-2"></div>
+              </div>
+          </div>
         </div>
-        <div class="mt-2">
-            <h1 class="text-center">Mis cachorros</h1>  
-            <div class="row">
-                <div class="col-2"></div>
-                    <div class="col-8">
-                        <div id="carouselExampleFade" class="carousel slide  carousel-fade" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="resources/chester.jpg" class="d-block rounded imgSeba" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="resources/jack.jpg" class="d-block rounded imgSeba" alt="...">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-                    </div>
-                <div class="col-2"></div>
-            </div>
-        </div>
-      </div>
-    </main>
-    <footer class="bg-dark">
-        <div class="container text-center">
-          <p class="text-muted mb-0 py-2">S&K</p>
-        </div>
-    </footer>
+      </main>
+      <footer class="bg-dark">
+          <div class="container text-center">
+            <p class="text-muted mb-0 py-2">S&K</p>
+          </div>
+      </footer>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
