Cambio checkbox y margenes. Se quita valor a checkbox y se valida su estado checked. Se remueve margen excesivo en contact.html Se remueven elementos duplicados en kevin.html

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,9 @@
           </div>
         </div>
       </nav>
-      </header>
+    </header>
         <!--  -->
+        <div>
       <main id="content-wrap" class="py-4 text-center">
               <div class="mb-3">
                   <h1>Contactanos:</h1>
@@ -73,7 +74,7 @@
                 <label for="correo">Correo Electrónico</label>
                 <input type="email" id="correo" name="correo" />
               </div>
-              <div class="row mb-3">
+              <div class="row mb-1">
                 <label for="selectId">Enviar solicitud a</label>
                 <select id="selectId" name="selectId">
                     <option value="seba">Sebastian</option>
@@ -96,7 +97,7 @@
               </label>
             </div>
             <div class="row mb-3 justify-content-center">
-            <input class="flex form-check-input" type="checkbox" value="si" id="flexVender" name="flexVender" checked>
+            <input class="flex form-check-input" type="checkbox" id="flexVender" name="flexVender" checked>
             </div>
                 <button id="btn-contact" class="btn btn-primary" type="button">Enviar</button>
             </form>
@@ -107,6 +108,7 @@
           <p class="text-muted mb-0 py-2">S&K</p>
         </div>
     </footer>
+  </div>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
