--- a/registro.html
+++ b/registro.html
@@ -10,41 +10,42 @@
     <script src="js/scriptForm.js"></script>
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-dark">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-dark navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contactanos</a>
-            </li>
-            <li class="nav-item">
+  <div id="page-container">
+    <header>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-dark navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contactanos</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="registro.html">Registrate</a>
               </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Conocenos
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
-              </ul>
-            </li>
-          </ul>
+              <li class="nav-item dropdown">
+                <a class="nav-link navbar-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Conocenos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item navbar-dark" href="sebastian.html">Sebastian Cerda</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item navbar-dark" href="kevin.html">Kevin Jara</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     </header>
       <!--  -->
     <div>
-    <main class="py-4 text-center">
+    <main id="content-wrap" class="py-4 text-center">
             <div class="mb-3">
                 <h1>Registrate:</h1>
                 <div class="d-flex justify-content-center">
@@ -115,6 +116,7 @@
       </div>
   </footer>
 </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
