--- a/kevin.html
+++ b/kevin.html
@@ -43,48 +43,12 @@
       </nav>
   </header>
   <main>
-    <div class="container-fluid">
+    <div id="content-wrap" class="container-fluid">
       <div class="row mt-5">
         <div class="col-8 contenedorh2"><h2 class="titulo">Kevin Alejandro Jara Machuca</h2></div>
         <div class="col-4 contenedorimg"><img class="img" id="imgPerfil" src="resources/fotomia.png" alt=""></div>
     </div>
-      <div class="contenedor">
-        <div class="contenido">
-          <div>
-            <h1 class="titulo2">Experiencia laboral</h1>
-            <p class="texto">
-             Eh trabajado como guardia de seguridad en la municipalidad de quilicura, como informaciones en la misma dependencia y como funcionario de informaciones en el sapu de quilicura rodrigo rojas denegri, desde los 18 hasta los 22 años. 
-            </p>
-          </div>
-          <div>
-            <h1 class="titulo2">Habilidades</h1>
-            <p class="texto">
-             Poseo grandes habilidades comunicativas, soy muy bueno adecuandome a los contextos sociales de mi entorno lo cual me ayuda a socializar de manera adecuada con casi todos los tipos de personas de mi entorno, se editar videos y fotografias, se diseñar aplicaciones moviles, se diseñar sitios web con visualcode y con wordpress y como habilidad no profesional soy musico de grado medio semi profesional y mis instrumentos son la guitarra la bateria y el piano.
-            </p>
-          </div>
-          <div>
-            <h1 class="titulo2">Estudios</h1>
-            <p class="texto">
-              Complete mi enseñanza basica y media, luego decidi estudiar programación asi que ingrese a la carrera de tecnico en programacion y analisis de sistemas en el instituto aiep, luego de cursar por esa carrera de 2 años estoy egresado a la espera de mi titulacion, mientras tanto realize un diplomado de desarrollo de aplicaciones moviles de IOS y actualmente estoy cursando un curso de desarrollo de front end
-            </p>
-          </div>
-          <div>
-            <h1 class="titulo2">Hobbies</h1>
-            <p class="texto">
-              Mis hobbies preferidos son la musica, me gusta mucho tocar guitarra y bateria, ademas de jugar videojuegos en especial los mas nuevos y los retro.
-            </p>
-          </div>		
-        </div>
-      </div>
-    </nav>
-    </header>
-    <main id="content-wrap">
-      <div class="container-fluid">
-        <div class="row mt-5">
-          <div class="col-8 contenedorh2"><h2 class="titulo">Kevin Alejandro Jara Machuca</h2></div>
-          <div class="col-4 contenedorimg"><img class="img" id="imgPerfil" src="resources/fotomia.png" alt=""></div>
-      </div>
-        <div class="contenedor mb-2">
+      <div class="contenedor mb-2">
           <div class="contenido">
             <div>
               <h1 class="titulo2">Experiencia laboral</h1>
@@ -111,10 +75,9 @@
               </p>
             </div>		
           </div>
-        </div>
-        </div>
-        </div>
-        </main>
+      </div>
+    </div>
+  </main>
         <footer class="bg-dark">
           <div class="container text-center">
             <p class="text-muted mb-0 py-2">S&K</p>
